# Project

./: README.md
Analyse/tp1/: CMakeLists.txt  Interface.hpp  InterfaceHysteresis.cpp  InterfaceHysteresis.hpp  InterfaceKernel.cpp  InterfaceKernel.hpp  InterfaceMain.cpp  InterfaceMain.hpp  InterfaceMulti.cpp  InterfaceMulti.hpp  InterfaceSeuil.cpp  InterfaceSeuil.hpp  Model.cpp  Model.hpp  README.md  kernel.hpp  main.cpp
Analyse/tp2/: CMakeLists.txt  Model.cpp  Model.hpp  README.md  kernel.cpp  main.cpp
Microblog/: README.md  pom.xml
PaperCut/: main.py  server.py
Portal/: README.md  control.cpp  current_premake.md  hit.cpp  portal.cpp  verifyData.cpp
RobotEV3/: README.md
RobotEV3/Robot_Attaque/: client.py  joystick_client.py  main.py
RobotEV3/analyse_video/: homographie.py  masque.xcf  pickPoint.py  receiver.py  receiver_2.py  receiver_modified.py  test.py
Simu/src/: CMakeLists.txt  algorithm.h  convex.h  install.md  main.cpp  mesh_interface.h  point.h
Simu/src/data/getfem/: nonlinear_elastostatic.param
Simu/src/data/meshes/: beam-4-4-24-prism.toposim  block-10x10x10-size5x5x5-tetra.3map
Temperature/: app.js
Temperature/public/: index_basique.html  index_bloc.html  script.js
reseauneurone/: README.md  requirements.txt
reseauneurone/AppliFlutterEmotion/: README.md  flutter_jank_metrics_01.json  pubspec.yaml
reseauneurone/AutoEncodeur_Chiffre/: autoencoder_mnist.py
reseauneurone/Modele_Cifar10/: modele_cifar.py  modelecifar.h5
serial-critique/: bd.sql  index.php
survivorhero/: Makefile  README.md
tetris/: README.md
(+167 files in other folders)
